comment out upload

--- a/Assignment0/admin-main.html
+++ b/Assignment0/admin-main.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Select answer key/file to upload</h1>
+        <!-- <h1>Select answer key/file to upload</h1>
+
         <script type="text/javascript">
+            
                 //MOVE TO USER
                 //
                 //
@@ -51,8 +53,10 @@
                 //
                 
             </script>
+
         <input type="file" accept = ".txt, .csv" onchange="loadFile(this)">
         <pre id="data"></pre>
+-->
         <h2> Add a User</h2>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
