Display Score for txt

--- a/Assignment0/user-main.html
+++ b/Assignment0/user-main.html
@@ -31,7 +31,7 @@
                             converter(e);
                             console.log(submittedAnswers/*.toString()*/)
                             var score = compare(Answers, submittedAnswers)
-                window.alert(score)
+                window.alert("Your score for this assignment is a " +score.toString())
                         };
                     fr.readAsText(o.files[0]);
                 }
