Instructions button added

--- a/Assignment0/login.html
+++ b/Assignment0/login.html
@@ -22,6 +22,11 @@
         <button type="submit">Guest</button>
         </center>
     </form>
+    
+    <form method="get" action="Instructions.html">
+          <button type="submit">Instructions</button>
+        </form>
+        
     </div>
 <script>
 var found = false;
