--- a/Assignment0/file-submit-guest.html
+++ b/Assignment0/file-submit-guest.html
@@ -25,7 +25,7 @@
 
     </script>
     <h3> View Requests </h3>
-        <input type="button" onclick="displayRequests()">View Request</button>
+        <input type="button" onclick="window.alert(updateRequest())">View Requests</button>
 
     <form method="get" action="login.html">
         <center>
